--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "angular": "^1.4.0",
     "bootstrap": "^3.2.0",
     "angular-chart.js": "^1.0.3",
-    "textAngular": "^1.5.13"
+    "textAngular": "^1.5.13",
+    "angular-ui-router": "^0.3.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
